[tool.poetry]
name = "kingbase-data-import"
version = "0.1.0"
description = "自定义excel导入kingbase工具"
authors = ["gaojunxin <gjx.xin@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
pyyaml = "^6.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
